# ProductJudge-Bench

./: .env.example  .gitignore  DATA_LICENSE  LICENSE  README.md  pyproject.toml
scenarios/public/: ab-market-001.yaml  ab-market-002.yaml  ab-simpson-001.yaml  ab-simpson-002.yaml  act-logistics-001.yaml  act-logistics-002.yaml  cap-cloud-001.yaml  cap-cloud-002.yaml  cap-fintech-001.yaml  cap-fintech-002.yaml  clarify-hipaa-001.yaml  clarify-hipaa-002.yaml  clarify-iot-001.yaml  clarify-iot-002.yaml  conf-devtools-001.yaml  conf-devtools-002.yaml  hist-onboarding-001.yaml  hist-onboarding-002.yaml  messy-featureask-001.yaml  messy-featureask-002.yaml  messy-renewal-001.yaml  messy-renewal-002.yaml  sig-hrtech-001.yaml  sig-hrtech-002.yaml
scripts/: derive_gold.py
src/pjbench/: __init__.py  baselines.py  cli.py  exprs.py  grade.py  oracle.py  prompt.py  providers.py  runner.py  schema.py  scoring.py  validate.py
tests/: factories.py  test_grade.py  test_oracle.py  test_scoring_validate_runner.py
