[project]
name = "pjbench"
version = "0.1.0"
description = "ProductJudge-Bench: a fully deterministic benchmark for policy-conditioned product decisions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Christian Ciabattoni" }]
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
run = [
    "anthropic>=0.40",
    "openai>=1.60",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pjbench = "pjbench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
